<resources>
    <string name="app_name">Card Info Finder</string>
    <string name="walkthrough_next">Next</string>
    <string name="walkthrough_skip">Skip</string>
    <string name="walkthrough_image_cd">WalkThrough Image</string>
    <string name="walkthrough_done">Done</string>
    <string name="input_mode_manual">Manual</string>
    <string name="input_mode_scan">Scan</string>
    <string name="input_mode_subtitle">You can choose to enter manually or
        scan with your phone</string>
    <string name="input_mode_title">Select input mode</string>
    <string name="input_mode_manual_cd">Keyboard icon</string>
    <string name="input_mode_scan_cd">OCR icon</string>


    <string name="bt_cvv">CVV</string>
    <string name="bt_cvc">CVC</string>
    <string name="bt_cid">CID</string>
    <string name="bt_cvn">CVN</string>

    <string name="bt_card_number_required">Card number is required</string>
    <string name="bt_card_number_invalid">Card number is invalid</string>
    <string name="action_next">Next</string>
    <string name="card_number_invalid_message">Please enter a valid card number</string>
    <string name="title_card_country">Country</string>
    <string name="image_location_cd">Location icon</string>
    <string name="title_card_bank">Bank</string>
    <string name="image_bank_cd">Bank icon</string>
    <string name="title_card_details">Card Info</string>
    <string name="image_card_cd">Card icon</string>
    <string name="back_icon_cd">Back icon</string>
    <string name="error_img_cd">Error icon</string>
    <string name="retry_btn_text">Retry</string>
    <string name="card_info_loading_message">Card info is loading…</string>
    <string name="currency_label">Currency: %s</string>
    <string name="credit_card">Credit card</string>
    <string name="credit_card_logo">Credit card logo</string>


    <string name="connect_exception">Could not connect to the server. Please check your
        internet connection and try again.
    </string>
    <string name="unknown_host_exception">Could not connect to the server.
        Please check your internet connection
    </string>
    <string name="timed_out_exception">Request timed out while trying to connect.
        Please ensure you have a strong signal and try again.
    </string>
    <string name="unknown_exception">An unexpected error has occurred. Try
        again and contact the administrator
    </string>
    <string name="card_number_title">Card number</string>
    <string name="card_number_subtitle">Enter your the number as it appears on your credit card</string>
    <string name="card_number_hint">Card number</string>
    <string name="scan_card_error_msg">Cannot get card number. Please try again</string>
    <string name="scan_card_camera_error_msg">Could not get card number due to camera error. Please try again</string>
    <string name="scan_card_analyser_error_msg">Could not get card number. Failure to analyse image. Please try again</string>
    <string name="walkthrough_title_1">Get card info</string>
    <string name="walkthrough_title_2">Enter manually</string>
    <string name="walkthrough_title_3">Scan OCR</string>
    <string name="walkthrough_title_4">View card details</string>
    <string name="walkthrough_subtitle_1">See your card info in an instant</string>
    <string name="walkthrough_subtitle_2">See your card info in an instant</string>
    <string name="walkthrough_subtitle_3">See your card info in an instant</string>
    <string name="walkthrough_subtitle_4">See your card info in an instant</string>
</resources>
