<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/img_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_icon_cd"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@id/guideline_l"
        app:layout_constraintTop_toTopOf="@id/guideline_t"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:text="@string/title_card_details"
        android:textAppearance="@style/TextAppearance.App.H2"
        app:layout_constraintBottom_toBottomOf="@id/img_back"
        app:layout_constraintEnd_toEndOf="@id/guideline_r"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/img_back"
        app:layout_constraintTop_toTopOf="@id/img_back" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_back">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <View
                    android:id="@+id/card_view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/background_input_mode"
                    app:layout_constraintDimensionRatio="h,1:0.5"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toTopOf="@id/guidelineTop" />


                <include
                    android:id="@+id/card_details"
                    layout="@layout/include_card_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/card_view" />


                <include
                    android:id="@+id/card_bank"
                    layout="@layout/include_card_bank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/card_details" />


                <include
                    android:id="@+id/card_country"
                    layout="@layout/include_card_country"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/card_bank" />


                <androidx.constraintlayout.widget.Group
                    android:id="@+id/card_details_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="card_view,card_bank,card_details,card_country" />


                <ImageView
                    android:id="@+id/error_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/error_img_cd"
                    app:layout_constraintBottom_toTopOf="@id/error_text_view"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.4"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:srcCompat="@drawable/ic_cloud" />

                <TextView
                    android:id="@+id/error_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintBottom_toTopOf="@id/retry_button"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/error_image"
                    app:layout_constraintWidth_max="256dp"
                    tools:text="An error occurred. Please retry" />


                <Button
                    android:id="@+id/retry_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/retry_btn_text"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
                    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toBottomOf="@id/error_text_view" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/error_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:constraint_referenced_ids="error_image,error_text_view" />


                <include layout="@layout/guidelines" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <include layout="@layout/guidelines_ltr" />

</androidx.constraintlayout.widget.ConstraintLayout>
